# sift

./: .env.example  .envrc  .gitignore  AGENTS.md  Cargo.toml  PHASE0.md  README.md  TODO.md  ZED_LESSONS.md  deny.toml  flake.nix  rust-toolchain.toml  sift.example.toml
.github/workflows/: ci.yml
crates/client-sdk/: Cargo.toml
crates/client-sdk/src/: lib.rs
crates/completion/: Cargo.toml
crates/completion/src/: context.rs  dictionary.rs  fuzzy.rs  keywords.rs  lib.rs  rank.rs
crates/completion/tests/: completion.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/doc/: Cargo.toml
crates/doc/src/: lib.rs
crates/driver-api/: Cargo.toml
crates/driver-api/src/: lib.rs  mock.rs
crates/driver-postgres/: Cargo.toml
crates/driver-postgres/examples/: bench.rs
crates/driver-postgres/src/: conn.rs  decode.rs  lib.rs  schema.rs  stream.rs
crates/driver-postgres/tests/: live_pg.rs
crates/driver-sqlserver/: Cargo.toml
crates/driver-sqlserver/examples/: bench.rs
crates/driver-sqlserver/src/: lib.rs
crates/driver-sqlserver/tests/: live_mssql.rs
crates/metadata/: Cargo.toml
crates/metadata/migrations/: V001__identity.sql  V002__connections.sql  V003__workspaces.sql  V004__history.sql  V005__api_token_lookup.sql  V006__rooms.sql  V007__documents.sql  V008__attachments.sql  V009__history_room.sql  V010__operation_audit.sql  V011__operation_audit_correlation.sql  V012__saved_query_search.sql  V013__api_token_mac.sql  V014__hosted_identity.sql  V015__instance_administration.sql  V016__password_reset.sql  V017__native_github_handoff.sql  V018__authorization_policy.sql
crates/metadata/src/: http.rs  lib.rs  schema.rs
crates/metadata/src/secrets/: file.rs  keychain.rs  mod.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: auth.rs  capability.rs  column.rs  completion.rs  connection.rs  csv_import.rs  edit.rs  engine.rs  error.rs  lib.rs  operation.rs  plan.rs  policy.rs  process.rs  result.rs  room.rs  schema.rs  search.rs  session.rs  transaction_panel.rs  tx.rs  value.rs
crates/server/: Cargo.toml
crates/server/src/: authorization.rs  autocomplete.rs  capability.rs  config.rs  correlation.rs  csv_import.rs  cursors.rs  ddl.rs  edit.rs  error.rs  export.rs  fingerprint.rs  http.rs  identity.rs  lib.rs  main.rs  metadata_runtime.rs  plan.rs  process.rs  rate_limit.rs  registry.rs  resources.rs  room_runtime.rs  room_service.rs  schema_cache.rs  search.rs  session.rs  shutdown.rs  sql_policy.rs
crates/server/tests/: api_smoke.rs  autocomplete.rs  capabilities.rs  csv_import.rs  ddl_round_trip.rs  driver_isolation.rs  edits.rs  explain.rs  limits.rs  operation_audit.rs  process.rs  reconnect.rs  search.rs  shutdown.rs  timeout.rs  transaction_polish.rs
docs/: BACKEND.md  DECISIONS.md  DRIVER_STATUS.md  DRIVER_TRAIT.md  FEATURES.md  LOCAL_DEV.md  NEXT_STEPS.md  PERFORMANCE-AUDIT.md  PHASE0_STATUS.md  README.md  TODO.md  zed-gpui-features.md
docs/DESIGN/: alternative-tech-counterfactual.md  language-capability-matrix.md  universal-driver-trait.md
docs/PLANS/: collab-native.md  core-plugin-boundary.md  csv-import.md  ddl-gaps.md  desktop-client.md  execution-plans.md  headless-collab-infra.md  hosted-identity.md  ide-parity-and-provider-extensibility.md  inline-edit-dml.md  metadata-store.md  operation-capabilities.md  phase-b-completion.md  phase-b-next-steps.md  phase-d-readiness.md  phase-f-authorization.md  process-control.md  quality-pass-findings-v2.md  quality-pass-findings.md  schema-data-search.md  server-build-list-v2.md  transactions-panel.md
docs/PLANS/changelists/: completion-deep-merge-path.md  completion-hot-path-dictionary.md  cursor-spill-blocking-io.md  ddl-column-defaults-identity.md  ddl-foreign-tables.md  ddl-routine-signatures.md  export-query-isolation.md  http-cancel-caller-scope.md  http-execute-memory-bound.md  metadata-async-rusqlite-inline.md  metadata-keychain-blocking.md  metadata-single-sqlite-connection.md  metadata-token-verification-hot-path.md  operation-log-sync-writes.md  postgres-cancel-tls-timeout.md  postgres-close-inflight-leak.md  postgres-copy-export-data.md  postgres-search-path-validation.md  postgres-warning-and-numeric-allocations.md  schema-cache-invalidators-bounds.md  schema-cache-singleflight-and-arc.md  sqlserver-decode-errors-as-null.md  sqlserver-error-mapping.md  sqlserver-pool-bounds-and-liveness.md
docs/legacy/: DRIVER_STATUS.md  FEATURES.md  NEXT_STEPS.md  TECH_STACK.md  ZED_LESSONS.md
scripts/: dev-mssql.sh  dev-secret-key.sh
