[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/core",
    "crates/driver-api",
    "crates/driver-postgres",
    "crates/driver-sqlserver",
    "crates/metadata",
    "crates/doc",
    "crates/server",
    "crates/client-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-only"
repository = "https://github.com/declan/sift"

[workspace.dependencies]
# Internal crates
sift-protocol = { path = "crates/protocol", version = "0.1.0" }
sift-core = { path = "crates/core", version = "0.1.0" }
sift-driver-api = { path = "crates/driver-api", version = "0.1.0" }
sift-driver-postgres = { path = "crates/driver-postgres", version = "0.1.0" }
sift-driver-sqlserver = { path = "crates/driver-sqlserver", version = "0.1.0" }
sift-metadata = { path = "crates/metadata", version = "0.1.0" }
sift-doc = { path = "crates/doc", version = "0.1.0" }
sift-server = { path = "crates/server", version = "0.1.0" }
sift-client-sdk = { path = "crates/client-sdk", version = "0.1.0" }

# External
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
csv = "1.3"
serde_bytes = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = "0.14"
axum = { version = "0.7", default-features = false, features = ["http1", "json", "query", "tokio", "tower-log", "tracing", "ws"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["trace", "cors", "normalize-path"] }
figment = { version = "0.10", default-features = false, features = ["toml", "env"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73", "chrono"] }
tokio-postgres-rustls = { version = "0.14", features = ["native-certs", "ring"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
codegen-units = 1
