[package]
name = "sift-completion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sift-protocol = { workspace = true }
sqlparser = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
