[package]
name = "sift-driver-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
live-pg = []

[dependencies]
sift-protocol = { workspace = true }
sift-driver-api = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
sift-driver-api = { workspace = true, features = ["mock"] }
futures = { workspace = true }

[[example]]
name = "bench"
path = "examples/bench.rs"
required-features = ["live-pg"]
