[package]
name = "sift-driver-sqlserver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
live-mssql = []

[dependencies]
sift-protocol = { workspace = true }
sift-driver-api = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tiberius = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[[example]]
name = "bench"
path = "examples/bench.rs"
required-features = ["live-mssql"]
