[package]
name = "sift-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sift-protocol = { workspace = true }
sift-core = { workspace = true }
sift-driver-api = { workspace = true, features = ["mock"] }
sift-driver-postgres = { workspace = true }
sift-driver-sqlserver = { workspace = true }
sift-doc = { workspace = true }
sift-metadata = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
# Forwards to sift-metadata: enables the OS keychain secret backend (pure-Rust,
# no system libdbus). Off by default — it needs a running credential service at
# runtime, which headless CI lacks.
os-keychain = ["sift-metadata/os-keychain"]
# Enables the 1M-row bounded-memory stress test in api_smoke. Slow
# (~10s+) so off by default; run manually or in nightly CI.
stress-1m = []

[dev-dependencies]
sift-client-sdk = { workspace = true }
sift-driver-api = { workspace = true, features = ["mock"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-tungstenite = { workspace = true }
tower = { workspace = true, features = ["util"] }

[[bin]]
name = "sift-server"
path = "src/main.rs"
